--- a/abi/Cargo.toml
+++ b/abi/Cargo.toml
@@ -10,6 +10,7 @@ chrono = { version = "0.4.23", features = ["serde"] }
 prost = "0.11.6"
 prost-types = "0.11.6"
 sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
+thiserror = "1.0.38"
 tonic = { version = "0.8.3", features = ["gzip"] }
 
 [build-dependencies]
