--- a/abi/Cargo.toml
+++ b/abi/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = { version = "0.4.23", features = ["serde"] }
 prost = "0.11.6"
 prost-types = "0.11.6"
+regex = "1.7.1"
 sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
 thiserror = "1.0.38"
 tonic = { version = "0.8.3", features = ["gzip"] }
